# UR5-Simulation

./: README.md
src/arm/: CMakeLists.txt  package.xml
src/arm/launch/: gazebo.launch.py
src/arm/urdf/: ur5.urdf
src/arm/world/: empty_world.world
src/moveit/: package.xml
src/moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5.ros2_control.xacro  ur5.srdf  ur5.urdf.xacro
src/moveit/launch/: bringup.launch.py  combine.launch.py  warehouse_db.launch.py
